# dicom-dictionary

./: .gitignore  Haskeleton.hs  Makefile  README.md  dicom-dictionary.cabal  stack.yaml
app/: Main.hs
benchmark/: Bench.hs
benchmark/Dicom/: DictionaryBench.hs
executable/: Main.hs
src/: Dictionary.hs  Main.hs  Paths_dicom_dictionary.hs
src/Data/DICOM/: Dictionary.hs  InternalDictionary.hs
src/Data/DICOM/Dictionary/Internal/: Utils.hs
test-suite/Dicom/: DictionarySpec.hs
