author:
    Dan Plubell
build-type:
    Simple
cabal-version:
    >= 1.10
category:
    -- TODO
    Other
copyright:
    2015 Dan Plubell <danplubell@gmail.com>
description:
    DICOM Dictionary data structures and utilities
extra-source-files:
    CHANGELOG.md
    CONTRIBUTING.md
    README.md
license-file:
    LICENSE.md
license:
    MIT
maintainer:
    dplubell@cerner.com
name:
    dicom-dictionary
synopsis:
    
tested-with:
    GHC == 7.8
version:
    0.0.0

library
    build-depends:
        base ==4.*
    default-language:
        Haskell2010
    exposed-modules:
        DICOM.Dictionary
        -- HASKELETON: New.Module
    ghc-options:
        -Wall
    ghc-prof-options:
        -auto-all
        -prof
    hs-source-dirs:
        library
